2007-10-26  Jerry Yu Cameron  <jijun.yu@sun.com>
	
	* base-specs/openobex.spec: add a patch.
	* patches/openobex-01-sun-studio.diff: Modified.
	* patches/openobex-05-zero-array.diff: Added for fixing a problem about zero array.

2007-10-26  Brian Cameron  <brian.cameron@sun.com>

	* SFEstrongwind.spec: Add new spec file.
	* SFEelisa.spec: Add dependency.

2007-10-26  Halton Huo <nonsea@users.sourceforge.net>

	* SFEgtk-vnc.spec: (new) A GTK widget for VNC clients
	* base-specs/gtk-vnc.spec: (new) A GTK widget for VNC clients
	* patches/gtk-vnc-01-makefile.diff: (added)
	  Add -last to LIBADD, remove --version-script which cause ld fail.
	* patches/gtk-vnc-02-macro.diff: (added)
	  Fix problem: suncc will generate "uint8 _t" insteat of "unit8_t"
	* patches/gtk-vnc-03-yield.diff: (added)
	  Rebame yield to gvnc_yield to avoid confict with /usr/include/unistd.h
	* patches/gtk-vnc-04-coroutine.diff: (added) upstream patch from trunk.

2007-10-25  Halton Huo <nonsea@users.sourceforge.net>

	* SFEgraphviz.spec: Add configure option --disale-perl,
	  Add patch gd-ldflags.diff, add /usr/include/gd2 to CFLAGS
	* SFEguile.spec: Bump to 1.8.3, Add patch define-function.diff
	* SFEruby.spec: Remove dup URL
	* patches/graphviz-02-gd-ldflags.diff: (added)
	* patches/guile-03-define-function.diff: (added)

2007-10-25  Lin Ma  <Lin.Ma@Sun.COM>

	* patches/gamin-01-all.diff: Fixed 6618464.

2007-10-25  simon.zheng  <simon.zheng@sun.com>

	* SFEgnome-power-manager.spec:
	  Delete NULL installation files /usr/share/docs.

2007-10-24  Lin Ma  <Lin.Ma@Sun.COM>

	* SUNWgamin.spec:
	* base-specs/gamin.spec: Removed some wrong comments.
	* patches/gamin-01-all.diff: Fixed 6618402 and 6618464.

2007-10-22  Brian Cameron  <brian.cameron@sun.com>

	* SFEpython-numpy.spec: Bump to 1.0.3.1.

2007-10-22  Brian Cameron  <brian.cameron@sun.com>

	* SFExchat.spec, patches/xchat-03-dbus-LDADD.diff:  Remove patch
	  that is no longer needed to build xchat.
